--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,11 +26,11 @@ const metadata = {
       {
         variant: 'primary',
         text: 'Get template',
-        href: 'https://github.com/onwidget/astrowind',
+        href: '/affiliate/xyz',
         target: '_blank',
         icon: 'tabler:download',
       },
-      { text: 'Learn more', href: '#features' },
+      { text: 'Go', href: '/affiliate/xyz' },
     ]}
     image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
   >
