--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,11 +51,11 @@ const metadata = {
   </Hero>
 
   <!-- Note Widget ******************* -->
-
+<!--
   <Note />
-
+-->
   <!-- Features Widget *************** -->
-
+<!--
   <Features
     id="features"
     tagline="Features"
@@ -100,9 +100,9 @@ const metadata = {
       },
     ]}
   />
-
+-->
   <!-- Content Widget **************** -->
-
+<!--
   <Content
     isReversed
     tagline="Inside template"
@@ -138,9 +138,9 @@ const metadata = {
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
   </Content>
-
+-->
   <!-- Content Widget **************** -->
-
+<!--
   <Content
     isAfterContent
     items={[
@@ -175,9 +175,9 @@ const metadata = {
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
   </Content>
-
+-->
   <!-- Content Widget **************** -->
-
+<!--
   <Content
     isReversed
     isAfterContent
@@ -213,9 +213,9 @@ const metadata = {
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
   </Content>
-
+-->
   <!-- Steps Widget ****************** -->
-
+<!--
   <Steps
     title="Get your dream website up and running in no time with AstroWind."
     items={[
@@ -247,9 +247,9 @@ const metadata = {
       alt: 'Steps image',
     }}
   />
-
+-->
   <!-- Features2 Widget ************** -->
-
+<!--
   <Features2
     title="Most used widgets"
     subtitle="Provides frequently used components for building websites using Tailwind CSS"
@@ -311,19 +311,18 @@ const metadata = {
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
   </Features2>
-
+-->
   <!-- HighlightedPosts Widget ******* -->
 
   <BlogLatestPosts
-    title="Find out more content in our Blog"
-    information={`The blog is used to display AstroWind documentation.
-                        Each new article will be an important step that you will need to know to be an expert in creating a website using Astro + Tailwind CSS.
-                        Astro is a very interesting technology. Thanks.
+    title="Most Recent Articles"
+    information={`Read our most recent articles.
+                        
                 `}
   />
 
   <!-- FAQs Widget ******************* -->
-
+<!-- Commented out
   <FAQs
     title="Frequently Asked Questions"
     subtitle="Dive into the following questions to gain insights into the powerful features that AstroWind offers and how it can elevate your web development journey."
@@ -362,9 +361,10 @@ const metadata = {
       },
     ]}
   />
+-->
+  <!-- Stats Widget ****************** commented out
 
-  <!-- Stats Widget ****************** -->
-
+  
   <Stats
     stats={[
       { title: 'Downloads', amount: '132K' },
@@ -373,7 +373,7 @@ const metadata = {
       { title: 'Users', amount: '48.4K' },
     ]}
   />
-
+-->
   <!-- CallToAction Widget *********** -->
 
   <CallToAction
